--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,10 @@ endif()
 add_executable(schiffe-versenken main.cpp)
 add_executable(server chat_server.cpp)
 add_executable(client chat_client.cpp)
+add_executable(test_client test_client.cpp)
 
 target_link_libraries(schiffe-versenken ${Boost_LIBRARIES})
 target_link_libraries(schiffe-versenken ${Boost_INCLUDE_DIRS}/stage/lib/*)
 target_link_libraries(server ${Boost_INCLUDE_DIRS}/stage/lib/*)
 target_link_libraries(client ${Boost_INCLUDE_DIRS}/stage/lib/*)
+target_link_libraries(test_client ${Boost_INCLUDE_DIRS}/stage/lib/*)
